07_network_policy_WIP/03_web.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: web-pod-1
  labels:
    tier: web
    app: HRApp-1
    site: USA
    deployment: production
spec:
  containers:
    - name: web-pod-1
      image: fashaikh7/proxy
      ports:
        - containerPort: 9090

---
apiVersion: v1
kind: Service
metadata:
  name: web-svc-1
  labels:
    tier: web
    app: HRApp-1
    site: USA
    deployment: production
spec:
  selector:
    tier: web
    app: HRApp-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
